--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CS193X Final Project",
   "main": "server.js",
   "engines": {
-    "node": "7x"
+    "node": "10.15.3"
   },
   "dependencies": {
     "body-parser": "^1.17.1",
